force-app/main/default/objects/SK_ACH_Commitment__c/SK_ACH_Commitment__c.object-meta.xml
<CustomObject>
    <label>Commitment</label>
    <nameField>
        <displayFormat>CMT-{0000}</displayFormat>
        <label>Commitment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commitments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>