force-app/main/default/objects/SK_ACH_Commitment__c/fields/SK_ACH_Commitment_Amount__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Commitment_Amount__c</fullName>
    <description>Total amount committed</description>
    <label>Commitment Amount</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>