force-app/main/default/objects/SK_ACH_Commitment__c/fields/SK_ACH_Commitment_Date__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Commitment_Date__c</fullName>
    <description>Date commitment was made</description>
    <label>Commitment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>