force-app/main/default/objects/SK_ACH_Commitment__c/fields/SK_ACH_Commitment_Notes__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Commitment_Notes__c</fullName>
    <description>Special terms or notes</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>