force-app/main/default/objects/SK_ACH_Commitment__c/fields/SK_ACH_Commitment_Status__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Commitment_Status__c</fullName>
    <label>Status</label>
    <description>Current status</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>