force-app/main/default/objects/SK_ACH_Commitment__c/fields/SK_ACH_Commitment_Type__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Commitment_Type__c</fullName>
    <label>Commitment Type</label>
    <description>Type of commitment</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
                <default>true</default>
                <label>Initial</label>
            </value>
            <value>
                <fullName>Additional</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Reduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>