force-app/main/default/objects/SK_ACH_Commitment__c/fields/SK_ACH_Fund__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Fund__c</fullName>
    <label>Fund</label>
    <description>Fund this commitment is for</description>
    <required>true</required>
    <type>Lookup</type>
    <referenceTo>SK_ACH_Fund__c</referenceTo>
    <relationshipLabel>Commitments</relationshipLabel>
    <relationshipName>Commitments</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>