force-app/main/default/objects/SK_ACH_Commitment__c/fields/SK_ACH_Investor__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Investor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Investor making the commitment</description>
    <label>Investor</label>
    <referenceTo>SK_ACH_Investor__c</referenceTo>
    <relationshipLabel>Commitments</relationshipLabel>
    <relationshipName>Commitments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>