force-app/main/default/objects/SK_ACH_Commitment__c/fields/SK_ACH_Investor_Net_Cash_Flow__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Investor_Net_Cash_Flow__c</fullName>
    <description>Total Distributed minus Total Paid</description>
    <formula>SK_ACH_Total_Distributed__c - SK_ACH_Total_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investor Net Cash Flow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>