force-app/main/default/objects/SK_ACH_Commitment__c/fields/SK_ACH_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Signature_Date__c</fullName>
    <label>Signature Date</label>
    <description>Date subscription was signed</description>
    <type>Date</type>
</CustomField>