force-app/main/default/objects/SK_ACH_Commitment__c/fields/SK_ACH_Subscription_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Subscription_Agreement_Signed__c</fullName>
    <label>Subscription Agreement Signed</label>
    <description>Whether subscription docs signed</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>