force-app/main/default/objects/SK_ACH_Commitment__c/fields/SK_ACH_Total_Distributed__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Total_Distributed__c</fullName>
    <description>Sum of distribution line amounts (calculated via trigger)</description>
    <label>Total Distributed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>