force-app/main/default/objects/SK_ACH_Commitment__c/fields/SK_ACH_Total_Paid__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Total_Paid__c</fullName>
    <description>Sum of amounts paid (calculated via trigger)</description>
    <label>Total Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>