force-app/main/default/objects/SK_ACH_Commitment__c/fields/SK_ACH_Unfunded_Balance__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Unfunded_Balance__c</fullName>
    <description>Commitment Amount minus Total Called</description>
    <formula>SK_ACH_Commitment_Amount__c - SK_ACH_Total_Called__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unfunded Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>