force-app/main/default/objects/SK_ACH_Commitment__c/validationRules/Commitment_Amount_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Commitment_Amount_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Commitment amount must be greater than zero</description>
    <errorConditionFormula>SK_ACH_Commitment_Amount__c &lt;= 0</errorConditionFormula>
    <errorMessage>Commitment amount must be greater than zero.</errorMessage>
</ValidationRule>