force-app/main/default/objects/SK_ACH_Commitment__c/validationRules/Signature_Date_Must_Be_Before_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Signature_Date_Must_Be_Before_Today</fullName>
    <active>true</active>
    <description>Signature date cannot be in the future</description>
    <errorConditionFormula>SK_ACH_Signature_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>SK_ACH_Signature_Date__c</errorDisplayField>
    <errorMessage>Signature date cannot be in the future.</errorMessage>
</ValidationRule>