force-app/main/default/objects/SK_ACH_Commitment__c/listViews/Executed_Commitments.listView-meta.xml
<ListView>
    <fullName>Executed_Commitments</fullName>
    <columns>NAME</columns>
    <columns>SK_ACH_Fund__c</columns>
    <columns>SK_ACH_Investor__c</columns>
    <columns>SK_ACH_Commitment_Amount__c</columns>
    <columns>SK_ACH_Total_Called__c</columns>
    <columns>SK_ACH_Total_Paid__c</columns>
    <columns>SK_ACH_Unfunded_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SK_ACH_Commitment_Status__c</field>
        <operation>equals</operation>
        <value>Executed</value>
    </filters>
    <label>Executed Commitments</label>
</ListView>