force-app/main/default/objects/SK_ACH_Commitment__c/listViews/Investor_Cash_Flow_Analysis.listView-meta.xml
<ListView>
    <fullName>Investor_Cash_Flow_Analysis</fullName>
    <columns>NAME</columns>
    <columns>SK_ACH_Investor__c</columns>
    <columns>SK_ACH_Fund__c</columns>
    <columns>SK_ACH_Total_Paid__c</columns>
    <columns>SK_ACH_Total_Distributed__c</columns>
    <columns>SK_ACH_Investor_Net_Cash_Flow__c</columns>
    <filterScope>Everything</filterScope>
    <label>Investor Cash Flow Analysis</label>
</ListView>